--- a/src/stv-footer.html
+++ b/src/stv-footer.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../../polymer/polymer.html">
 <dom-module id="stv-footer">
     <style>
         :host {
@@ -20,10 +21,10 @@
     <template>
         <content></content>
     </template>
-</dom-module>
 
 <script>
     Polymer({
         is: "stv-footer"
     });
 </script>
+</dom-module>
