--- a/src/stv-header.html
+++ b/src/stv-header.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../../polymer/polymer.html">
-<link rel="import" href="../../iron-flex-layout/classes/iron-flex-layout.html">
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 
 <link rel="import" href="stv-login.html">
 <link rel="import" href="stv-signup.html">
@@ -7,6 +7,7 @@
 <link rel="import" href="stv-remember.html">
 
 <dom-module id="stv-header">
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
     <style>
         :host {
             position: relative;
@@ -226,265 +227,267 @@
         </div>
     </template>
 
-    </template>
-</dom-module>
-
-<script>
-    Polymer({
-        is: "stv-header",
-        properties: {
-            checkTimeInterval: {
-                type: Number,
-                value: 5000,
-                reflectToAttribute: true
-            },
-            selectedOption: {
-                type: String,
-                value: "home",
-                notify: true,
-                reflectToAttribute: true,
-                observer: 'selectedOptionChanged'
-            },
-            hideLogin: {
-                type: Boolean,
-                value: false,
-                reflectToAttribute: true
-            },
-            hideSignup: {
-                type: Boolean,
-                value: false,
-                reflectToAttribute: true
-            },
-            /* @Deprecated */
-            showMenuOnLogin: {
-                type: Boolean,
-                value: false,
-                reflectToAttribute: true
-            },
-            isLogged: {
-                type: Boolean,
-                value: false
-            },
-            hideAnonymous: {
-                type: Boolean,
-                value: false,
-                reflectToAttribute: true
-            },
-            userData: {
-                type: Object,
-                notify: true
-            },
-            userText: {
-                type: String,
-                value: ''
-            },
-            jobItem: {
-                type: Object
-            },
-            allowedTools: {
-                type: Array
-            },
-            small: {
-                type: Boolean,
-                value: false,
-                reflectToAttribute: true
-            }
-        },
-
-        computeMenu: function(showMenuOnLogin, isLogged) {
-            if (showMenuOnLogin) {
-                return !isLogged;
-            }
-            return false;
-        },
-
-        computeUser: function(hideLogin, isLogged) {
-            if (hideLogin) {
-                return true;
-            }
-            return !isLogged
-        },
-        computeProfile: function(userText, hideSignup, hideLogin, isLogged) {
-            if (hideSignup || hideLogin || userText == 'anonymous') {
-                return true;
-            }
-            return !isLogged
-        },
-        computeLogout: function(hideLogin, isLogged) {
-            if (hideLogin) {
-                return true;
-            }
-            return !isLogged
-        },
-        computeSignup: function(hideSignup, hideLogin, isLogged) {
-            if (hideLogin || hideSignup) {
-                return true;
-            }
-            return isLogged
-        },
-        computeLogin: function(hideLogin, isLogged) {
-            if (hideLogin) {
-                return true;
-            }
-            return isLogged
-        },
-        selectedOptionChanged: function(neo, old) {
-            var menuItems = Polymer.dom(this.root).querySelectorAll('[menu-option]');
-            for (var i = 0; i < menuItems.length; i++) {
-                var item = menuItems[i];
-                var currentItemValue = item.getAttribute("menu-option");
-                if (neo == currentItemValue) {
-                    item.removeAttribute("hidden");
-                } else {
-                    item.setAttribute('hidden', '');
+    <script>
+        Polymer({
+            is: "stv-header",
+            properties: {
+                checkTimeInterval: {
+                    type: Number,
+                    value: 5000,
+                    reflectToAttribute: true
+                },
+                selectedOption: {
+                    type: String,
+                    value: "home",
+                    notify: true,
+                    reflectToAttribute: true,
+                    observer: 'selectedOptionChanged'
+                },
+                hideLogin: {
+                    type: Boolean,
+                    value: false,
+                    reflectToAttribute: true
+                },
+                hideSignup: {
+                    type: Boolean,
+                    value: false,
+                    reflectToAttribute: true
+                },
+                /* @Deprecated */
+                showMenuOnLogin: {
+                    type: Boolean,
+                    value: false,
+                    reflectToAttribute: true
+                },
+                isLogged: {
+                    type: Boolean,
+                    value: false
+                },
+                hideAnonymous: {
+                    type: Boolean,
+                    value: false,
+                    reflectToAttribute: true
+                },
+                userData: {
+                    type: Object,
+                    notify: true
+                },
+                userText: {
+                    type: String,
+                    value: ''
+                },
+                jobItem: {
+                    type: Object
+                },
+                allowedTools: {
+                    type: Array
+                },
+                small: {
+                    type: Boolean,
+                    value: false,
+                    reflectToAttribute: true
                 }
-            }
-        },
-        //TODO
-        ready: function() {
-            if (!this.hideLogin) {
-                if (Cookies("bioinfo_sid") && Cookies("bioinfo_user")) {
+            },
+
+            computeMenu: function(showMenuOnLogin, isLogged) {
+                if (showMenuOnLogin) {
+                    return !isLogged;
+                }
+                return false;
+            },
+
+            computeUser: function(hideLogin, isLogged) {
+                if (hideLogin) {
+                    return true;
+                }
+                return !isLogged
+            },
+            computeProfile: function(userText, hideSignup, hideLogin, isLogged) {
+                if (hideSignup || hideLogin || userText == 'anonymous') {
+                    return true;
+                }
+                return !isLogged
+            },
+            computeLogout: function(hideLogin, isLogged) {
+                if (hideLogin) {
+                    return true;
+                }
+                return !isLogged
+            },
+            computeSignup: function(hideSignup, hideLogin, isLogged) {
+                if (hideLogin || hideSignup) {
+                    return true;
+                }
+                return isLogged
+            },
+            computeLogin: function(hideLogin, isLogged) {
+                if (hideLogin) {
+                    return true;
+                }
+                return isLogged
+            },
+            selectedOptionChanged: function(neo, old) {
+                var menuItems = Polymer.dom(this.root).querySelectorAll('[menu-option]');
+                for (var i = 0; i < menuItems.length; i++) {
+                    var item = menuItems[i];
+                    var currentItemValue = item.getAttribute("menu-option");
+                    if (neo == currentItemValue) {
+                        item.removeAttribute("hidden");
+                    } else {
+                        item.setAttribute('hidden', '');
+                    }
+                }
+            },
+            //TODO
+            ready: function() {
+                if (!this.hideLogin) {
+                    if (Cookies("bioinfo_sid") && Cookies("bioinfo_user")) {
+                        this.sessionInitiated();
+                    } else {
+                        this.sessionFinished();
+                    }
+                }
+            },
+            handleRemember: function(e) {
+                this.selectedOption = 'remember';
+            },
+            handleSignup: function(e) {
+                this.selectedOption = 'signup';
+            },
+            handleAnonymous: function(e) {
+                this.anonymousSign();
+            },
+            handleMenu: function(e) {
+                var option = e.currentTarget.dataset['option'];
+                console.log(option);
+                if (option) {
+                    this.selectedOption = option;
+                }
+            },
+            handleLogoutClick: function(e) {
+                this.sessionFinished();
+            },
+            handleSupportMenu: function(e) {
+                this.$.helpMenu.classList.toggle('help-menu-shown');
+            },
+            handleHelpMenuMouseOut: function() {
+                this.$.helpMenu.classList.remove('help-menu-shown');
+            },
+            handleLogin: function(e) {
+                if (e.detail.status) {
                     this.sessionInitiated();
                 } else {
                     this.sessionFinished();
                 }
-            }
-        },
-        handleRemember: function(e) {
-            this.selectedOption = 'remember';
-        },
-        handleSignup: function(e) {
-            this.selectedOption = 'signup';
-        },
-        handleAnonymous: function(e) {
-            this.anonymousSign();
-        },
-        handleMenu: function(e) {
-            var option = e.currentTarget.dataset['option'];
-            console.log(option);
-            if (option) {
-                this.selectedOption = option;
-            }
-        },
-        handleLogoutClick: function(e) {
-            this.sessionFinished();
-        },
-        handleSupportMenu: function(e) {
-            this.$.helpMenu.classList.toggle('help-menu-shown');
-        },
-        handleHelpMenuMouseOut: function() {
-            this.$.helpMenu.classList.remove('help-menu-shown');
-        },
-        handleLogin: function(e) {
-            if (e.detail.status) {
-                this.sessionInitiated();
-            } else {
-                this.sessionFinished();
-            }
-            this.fire('session-change');
-        },
-        demoLogin: function(username) {
-            this.$.stvLogin.user = username;
-            this.$.stvLogin.password = "demo";
-            this.$.stvLogin._login();
-        },
-        anonymousSign: function() {
-            this.$.stvSignup.email = "anonymous@anonymous.anonymous";
-            this.$.stvSignup.password = "anonymous";
-            this.$.stvSignup._signup();
-        },
-        sessionInitiated: function(e) {
-            var me = this;
-            this.isLogged = true;
-            this.selectedOption = 'home';
+                this.fire('session-change');
+            },
+            demoLogin: function(username) {
+                this.$.stvLogin.user = username;
+                this.$.stvLogin.password = "demo";
+                this.$.stvLogin._login();
+            },
+            anonymousSign: function() {
+                this.$.stvSignup.email = "anonymous@anonymous.anonymous";
+                this.$.stvSignup.password = "anonymous";
+                this.$.stvSignup._signup();
+            },
+            sessionInitiated: function(e) {
+                var me = this;
+                this.isLogged = true;
+                this.selectedOption = 'home';
 
-            /**START CHECK**/
-            if (!this.userInfoInterval) {
-                this.getUserInfo(); //first call
-                this.userInfoInterval = setInterval(function() {
-                    me.getUserInfo();
-                }, this.checkTimeInterval);
-            }
-            this.fire("login");
-        },
-        sessionFinished: function(e) {
-            this.logout();
-            this.userData = null;
-            this.selectedOption = 'home';
-            this.isLogged = false;
-            Cookies.expire('bioinfo_sid',{path:window.location.pathname});
-            Cookies.expire('bioinfo_user',{path:window.location.pathname});
+                /**START CHECK**/
+                if (!this.userInfoInterval) {
+                    this.getUserInfo(); //first call
+                    this.userInfoInterval = setInterval(function() {
+                        me.getUserInfo();
+                    }, this.checkTimeInterval);
+                }
+                this.fire("login");
+            },
+            sessionFinished: function(e) {
+                this.logout();
+                this.userData = null;
+                this.selectedOption = 'home';
+                this.isLogged = false;
+                Cookies.expire('bioinfo_sid', {
+                    path: window.location.pathname
+                });
+                Cookies.expire('bioinfo_user', {
+                    path: window.location.pathname
+                });
 
-            /**END CHECK**/
-            clearInterval(this.userInfoInterval);
-            this.userInfoInterval = null;
-            this.fire("logout");
-        },
-        getUserInfo: function(force) {
-            var me = this;
-            var updatedAt = null;
-            if (force != true) {
-                if (this.userData != null) {
-                    updatedAt = this.userData.updatedAt;
+                /**END CHECK**/
+                clearInterval(this.userInfoInterval);
+                this.userInfoInterval = null;
+                this.fire("logout");
+            },
+            getUserInfo: function(force) {
+                var me = this;
+                var updatedAt = null;
+                if (force != true) {
+                    if (this.userData != null) {
+                        updatedAt = this.userData.updatedAt;
+                    }
+                }
+                var user = Cookies('bioinfo_user');
+                if (!user) {
+                    console.log('cookie: bioinfo_user, is not set, session will be finished...');
+                    this.sessionFinished();
+                } else {
+                    SteviaManager.users.read({
+                        id: user,
+                        query: {
+                            sid: Cookies('bioinfo_sid'),
+                            updatedAt: updatedAt
+                        },
+                        request: {
+                            success: function(response) {
+                                if (response.response[0].error == null && response.response[0].results.length > 0) {
+                                    me.userData = response.response[0].results[0];
+                                    me.userText = me._checkUserName(me.userData);
+                                    console.log("userData has been modified since last call");
+                                }
+                                if (response.response[0].error != null) {
+                                    me.sessionFinished()
+                                }
+                            },
+                            error: function() {
+                                console.log('Server error, try again later.');
+                            }
+                        }
+                    });
+                }
+            },
+            logout: function() {
+                var me = this;
+                var user = Cookies('bioinfo_user');
+                if (!user) {
+                    console.log('cookie: bioinfo_user, is not set, session will be finished...');
+                } else {
+                    SteviaManager.users.logout({
+                        id: user,
+                        query: {
+                            sid: Cookies('bioinfo_sid')
+                        },
+                        request: {
+                            success: function(response) {
+                                console.log(response);
+                            },
+                            error: function() {
+                                console.log('Server error, try again later.');
+                            }
+                        }
+                    });
+                }
+            },
+            _checkUserName: function(userData) {
+                if (userData.email.indexOf('anonymous___') != -1) {
+                    return 'anonymous';
+                } else {
+                    return userData.email;
                 }
             }
-            var user = Cookies('bioinfo_user');
-            if (!user) {
-                console.log('cookie: bioinfo_user, is not set, session will be finished...');
-                this.sessionFinished();
-            } else {
-                SteviaManager.users.read({
-                    id: user,
-                    query: {
-                        sid: Cookies('bioinfo_sid'),
-                        updatedAt: updatedAt
-                    },
-                    request: {
-                        success: function(response) {
-                            if(response.response[0].error == null && response.response[0].results.length > 0){
-                                me.userData = response.response[0].results[0];
-                                me.userText = me._checkUserName(me.userData);
-                                console.log("userData has been modified since last call");
-                            }
-                            if (response.response[0].error != null) {
-                                me.sessionFinished()
-                            }
-                        },
-                        error: function() {
-                            console.log('Server error, try again later.');
-                        }
-                    }
-                });
-            }
-        },
-        logout: function() {
-            var me = this;
-            var user = Cookies('bioinfo_user');
-            if (!user) {
-                console.log('cookie: bioinfo_user, is not set, session will be finished...');
-            } else {
-                SteviaManager.users.logout({
-                    id: user,
-                    query: {
-                        sid: Cookies('bioinfo_sid')
-                    },
-                    request: {
-                        success: function(response) {
-                            console.log(response);
-                        },
-                        error: function() {
-                            console.log('Server error, try again later.');
-                        }
-                    }
-                });
-            }
-        },
-        _checkUserName: function(userData) {
-            if (userData.email.indexOf('anonymous___') != -1) {
-                return 'anonymous';
-            } else {
-                return userData.email;
-            }
-        }
-    });
-</script>
+        });
+    </script>
+</dom-module>
