--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -1,3 +1,6 @@
+<link rel="import" href="../../../polymer/polymer.html">
+<link rel="import" href="../../../iron-flex-layout/iron-flex-layout-classes.html">
+
 <link rel="import" href="stv-file-upload.html">
 <link rel="import" href="stv-folder-list.html">
 <link rel="import" href="stv-file-preview.html">
@@ -5,6 +8,7 @@
 
 
 <dom-module id="stv-file-browser">
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
     <style>
         :host {
             display: block;
