--- a/src/file/stv-file-upload.html
+++ b/src/file/stv-file-upload.html
@@ -1,7 +1,11 @@
+<link rel="import" href="../../../polymer/polymer.html">
+<link rel="import" href="../../../iron-flex-layout/iron-flex-layout-classes.html">
+
 <link rel="import" href="stv-file-bioformat.html">
 <link rel="import" href="../validator/stv-validator.html">
 
 <dom-module id="stv-file-upload">
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
     <style>
         :host {
             display: block;
