--- a/src/job/stv-job-item.html
+++ b/src/job/stv-job-item.html
@@ -1,4 +1,7 @@
+<link rel="import" href="../../../polymer/polymer.html">
+<link rel="import" href="../../../iron-flex-layout/iron-flex-layout-classes.html">
 <dom-module id="stv-job-item">
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
     <style>
         :host {
             display: block;
@@ -137,165 +140,165 @@
             </stv-panel>
         </div>
     </template>
-</dom-module>
-<script>
-    Polymer({
-        is: "stv-job-item",
-        properties: {
-            job: {
-                type: Object,
-                notify: true,
-            },
-            showInfo: {
-                type: Boolean,
-                value: false
-            },
-            contentData: {
-                type: String,
-                value: "",
-            },
-            disableRelaunch: {
-                type: Boolean,
-                reflectToAttribute: true,
-                value: false
-            }
-        },
-        created: function() {},
-        computeDate: function(job) {
-            var date = new Date(Date.parse(job.createdAt));
-            return date.toLocaleString();
-        },
-        computeStatusIcon: function(job) {
-            var iconMap = {
-                "EXEC_ERROR": 'ERROR fa fa-times',
-                "QUEUE_ERROR": 'ERROR fa fa-times',
-                "QUEUE_WAITING_ERROR": 'ERROR fa fa-times',
-                "ERROR": 'ERROR fa fa-times',
-                "QUEUED": 'QUEUED fa fa-clock-o',
-                "RUNNING": 'RUNNING fa fa-circle-o-notch fa-spin',
-                "DONE": 'DONE fa fa-check'
-            };
-            return iconMap[job.status];
-        },
-        computeStatus: function(job) {
-            return job.status.toLowerCase();
-        },
-        computeStatusClass: function(job) {
-            return "capitalize " + job.status;
-        },
-        computeToolName: function(job) {
-            if (job.execution != null && job.execution != '') {
-                return job.execution;
-            }
-            return job.tool;
-        },
-        isRunning: function(job) {
-            return job.status == "RUNNING";
-        },
-        hasError: function(job) {
-            return job.status.indexOf("ERROR") != -1;
-        },
-        handleDeleteJob: function(e) {
-            var me = this;
-            e.stopPropagation();
-            if (confirm("Are you sure?")) {
-                SteviaManager.jobs.delete({
-                    query: {
-                        jobId: this.job._id,
-                        sid: Cookies("bioinfo_sid")
-                    },
-                    request: {
-                        success: function(response) {
-                            if (response.response[0].error == null) {
-                                console.log('Job deleted');
-                                me.fire('need-refresh');
-                            } else {
-                                console.log(response.response[0].error);
-                            }
-                        },
-                        error: function() {
-                            console.log('Server error, try again later.');
-                        }
-                    }
-                });
-            }
-        },
-        handleRelaunchJob: function(e) {
-            e.stopPropagation();
-            var me=this;
-            if (confirm("You are going to relaunch this Job. Are you sure?")) {
-                var query = {
-                    sid: Cookies("bioinfo_sid"),
-                    name: this.job.name,
-                    description: this.job.description,
-                    outdirId:this.job.folder.parent
-                };
-                var jobConfig = {};
-                jobConfig.options = this.job.options;
-                jobConfig.tool = this.job.tool;
-                jobConfig.execution = this.job.execution;
-                jobConfig.executable = this.job.executable;
-
-                SteviaManager.jobs.create({
-                    query: query,
-                    request: {
-                        method: 'POST',
-                        headers: {
-                            "Content-Type": "application/json"
-                        },
-                        body: JSON.stringify(jobConfig),
-                        success: function(response) {
-                            if (response.response[0].error == null) {
-                                console.log(response);
-                            } else {
-                                console.log(response.response[0].error);
-                            }
-                            me.fire('job-launched');
-                        },
-                        error: function() {
-                            console.log('Server error, try again later.');
-                        }
-                    }
-                });
-            }
-        },
-
-        handleJobInformation: function(e) {
-            e.stopPropagation();
-            this.showInfo = !this.showInfo;
-        },
-
-        handleViewLogFile: function(e) {
-            e.stopPropagation();
-            this.$.filePreview.fileId = this.job.olog;
-            this.$.filePreviewPanel.show();
-        },
-        handleViewErrorFile: function(e) {
-            e.stopPropagation();
-            this.$.filePreview.fileId = this.job.elog;
-            this.$.filePreviewPanel.show();
-        },
-        handleReportError: function(e) {
-            e.stopPropagation();
-            var jobId = this.job._id;
-            SteviaManager.jobs.reportError({
-                id: jobId,
-                query: {
-                    sid: Cookies('bioinfo_sid')
+    <script>
+        Polymer({
+            is: "stv-job-item",
+            properties: {
+                job: {
+                    type: Object,
+                    notify: true,
                 },
-                request: {
-                    success: function(response) {
-                        if (response.response[0].error == null) {
-                            alert(response.response[0].results[0]);
-                        } else {
-                            alert('Sorry! There was a problem, try again later');
-                        }
-                    },
-                    error: function() {
-                        console.log('Server error, try again later');
-                    }
+                showInfo: {
+                    type: Boolean,
+                    value: false
+                },
+                contentData: {
+                    type: String,
+                    value: "",
+                },
+                disableRelaunch: {
+                    type: Boolean,
+                    reflectToAttribute: true,
+                    value: false
                 }
-            });
-        }
-    });
-</script>
+            },
+            created: function() {},
+            computeDate: function(job) {
+                var date = new Date(Date.parse(job.createdAt));
+                return date.toLocaleString();
+            },
+            computeStatusIcon: function(job) {
+                var iconMap = {
+                    "EXEC_ERROR": 'ERROR fa fa-times',
+                    "QUEUE_ERROR": 'ERROR fa fa-times',
+                    "QUEUE_WAITING_ERROR": 'ERROR fa fa-times',
+                    "ERROR": 'ERROR fa fa-times',
+                    "QUEUED": 'QUEUED fa fa-clock-o',
+                    "RUNNING": 'RUNNING fa fa-circle-o-notch fa-spin',
+                    "DONE": 'DONE fa fa-check'
+                };
+                return iconMap[job.status];
+            },
+            computeStatus: function(job) {
+                return job.status.toLowerCase();
+            },
+            computeStatusClass: function(job) {
+                return "capitalize " + job.status;
+            },
+            computeToolName: function(job) {
+                if (job.execution != null && job.execution != '') {
+                    return job.execution;
+                }
+                return job.tool;
+            },
+            isRunning: function(job) {
+                return job.status == "RUNNING";
+            },
+            hasError: function(job) {
+                return job.status.indexOf("ERROR") != -1;
+            },
+            handleDeleteJob: function(e) {
+                var me = this;
+                e.stopPropagation();
+                if (confirm("Are you sure?")) {
+                    SteviaManager.jobs.delete({
+                        query: {
+                            jobId: this.job._id,
+                            sid: Cookies("bioinfo_sid")
+                        },
+                        request: {
+                            success: function(response) {
+                                if (response.response[0].error == null) {
+                                    console.log('Job deleted');
+                                    me.fire('need-refresh');
+                                } else {
+                                    console.log(response.response[0].error);
+                                }
+                            },
+                            error: function() {
+                                console.log('Server error, try again later.');
+                            }
+                        }
+                    });
+                }
+            },
+            handleRelaunchJob: function(e) {
+                e.stopPropagation();
+                var me = this;
+                if (confirm("You are going to relaunch this Job. Are you sure?")) {
+                    var query = {
+                        sid: Cookies("bioinfo_sid"),
+                        name: this.job.name,
+                        description: this.job.description,
+                        outdirId: this.job.folder.parent
+                    };
+                    var jobConfig = {};
+                    jobConfig.options = this.job.options;
+                    jobConfig.tool = this.job.tool;
+                    jobConfig.execution = this.job.execution;
+                    jobConfig.executable = this.job.executable;
+
+                    SteviaManager.jobs.create({
+                        query: query,
+                        request: {
+                            method: 'POST',
+                            headers: {
+                                "Content-Type": "application/json"
+                            },
+                            body: JSON.stringify(jobConfig),
+                            success: function(response) {
+                                if (response.response[0].error == null) {
+                                    console.log(response);
+                                } else {
+                                    console.log(response.response[0].error);
+                                }
+                                me.fire('job-launched');
+                            },
+                            error: function() {
+                                console.log('Server error, try again later.');
+                            }
+                        }
+                    });
+                }
+            },
+
+            handleJobInformation: function(e) {
+                e.stopPropagation();
+                this.showInfo = !this.showInfo;
+            },
+
+            handleViewLogFile: function(e) {
+                e.stopPropagation();
+                this.$.filePreview.fileId = this.job.olog;
+                this.$.filePreviewPanel.show();
+            },
+            handleViewErrorFile: function(e) {
+                e.stopPropagation();
+                this.$.filePreview.fileId = this.job.elog;
+                this.$.filePreviewPanel.show();
+            },
+            handleReportError: function(e) {
+                e.stopPropagation();
+                var jobId = this.job._id;
+                SteviaManager.jobs.reportError({
+                    id: jobId,
+                    query: {
+                        sid: Cookies('bioinfo_sid')
+                    },
+                    request: {
+                        success: function(response) {
+                            if (response.response[0].error == null) {
+                                alert(response.response[0].results[0]);
+                            } else {
+                                alert('Sorry! There was a problem, try again later');
+                            }
+                        },
+                        error: function() {
+                            console.log('Server error, try again later');
+                        }
+                    }
+                });
+            }
+        });
+    </script>
+</dom-module>
