--- a/src/stv-color-picker.html
+++ b/src/stv-color-picker.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../../polymer/polymer.html">
 <dom-module id="stv-color-picker">
     <style>
         :host {
@@ -22,7 +23,8 @@
             transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
         }
 
-        #colorinput:focus, #colorbox:focus {
+        #colorinput:focus,
+        #colorbox:focus {
             outline: 0;
         }
 
@@ -82,8 +84,7 @@
         }
     </style>
     <template>
-        <div title="{{ctitle}}" tabindex="0" id="colorbox" on-focus="handleColorBoxClick"
-             style$="{{computeColorStyle(color)}}"></div>
+        <div title="{{ctitle}}" tabindex="0" id="colorbox" on-focus="handleColorBoxClick" style$="{{computeColorStyle(color)}}"></div>
         <input id="colorinput" type="text" value="{{color::input}}" on-keypress="handleKeyPress">
         <ul id="colorlist">
             <template is="dom-repeat" items="{{colors}}" as="c">
@@ -91,184 +92,188 @@
             </template>
         </ul>
     </template>
-</dom-module>
-<script>
-    Polymer({
-        is: 'stv-color-picker',
-        properties: {
-            preset: {
-                type: String,
-                value: 'default'
-            },
-            colors: {
-                type: Array,
-                computed: 'computeColors(preset)'
-            },
-            color: {
-                type: String,
-                notify: true,
-                reflectToAttribute: true,
-                value: ''
-            },
-            ctitle: {
-                type: String
-            }
-        },
-        attached: function () {
-            this.async(function () {
-                this._updatePosition();
-            });
-        },
-        _updatePosition: function () {
-            var boxRect = this.getBoundingClientRect();
-            var listRect = this.$.colorlist.getBoundingClientRect();
-            var leftDiff = listRect.width - (window.innerWidth - boxRect.left);
-            var botDiff = listRect.height - (window.innerHeight - boxRect.bottom);
-            if (leftDiff > 0) {
-                this.$.colorlist.style.left = (boxRect.left - listRect.width + 20) + 'px';
-            } else {
-                this.$.colorlist.style.left = (boxRect.left) + 'px';
-            }
-            if (botDiff > 0) {
-                this.$.colorlist.style.top = (boxRect.top - listRect.height ) + "px";
-            } else {
-                this.$.colorlist.style.top = (boxRect.top + 25) + "px";
-            }
-        },
-        handleColorClick: function (e) {
-            var color = e.model.c;
-            this.color = color;
-            this.fire("color-click", {color: color});
-        },
-        handleKeyPress: function (e) {
-            if (e.keyCode == 13) {
-                this.fire("color-click", {color: this.color});
-            }
-        },
-        handleColorBoxClick: function (e) {
-            this._updatePosition();
-        },
-        computeColorStyle: function (color) {
-            return 'background-color:' + color;
-        },
-        computeColors: function (preset) {
-            return this._generateColors(preset);
-        },
-        _generateColors: function (preset) {
-            var presetPalettes = {
-                'default': {
-                    'saturation': [70.0, 100.0, 'rows'],
-                    'hue': [0.0, 300.0, 'cols'],
-                    'value': [40.0, 98.0, 'rows']
+    <script>
+        Polymer({
+            is: 'stv-color-picker',
+            properties: {
+                preset: {
+                    type: String,
+                    value: 'default'
                 },
-                'warm': {
-                    'saturation': [70.0, 100.0, 'rows'],
-                    'hue': [0.0, 60.0, 'cols'],
-                    'value': [40.0, 98.0, 'rows']
+                colors: {
+                    type: Array,
+                    computed: 'computeColors(preset)'
                 },
-                'cool': {
-                    'saturation': [70.0, 100.0, 'rows'],
-                    'hue': [150.0, 280.0, 'cols'],
-                    'value': [40.0, 98.0, 'rows']
+                color: {
+                    type: String,
+                    notify: true,
+                    reflectToAttribute: true,
+                    value: ''
                 },
-                'moody': {
-                    'saturation': [80.0, 12.0, 'rows'],
-                    'hue': [0.0, 300.0, 'cols'],
-                    'value': [30.0, 70.0, 'rows']
-                },
-                'primary': {
-                    'saturation': [100.0, 100.0, 'rows'],
-                    'hue': [0.0, 300.0, 'cols'],
-                    'value': [50.0, 98.0, 'rows']
-                },
-                'pastel': {
-                    'saturation': [50.0, 90.0, 'rows'],
-                    'hue': [0.0, 300.0, 'cols'],
-                    'value': [70.0, 98.0, 'rows']
+                ctitle: {
+                    type: String
                 }
-            };
-            var hslToRgb = function (h, s, l) {
-                var r, g, b;
-
-                // normalize hue orientation b/w 0 and 360 degrees
-                h = h % 360;
-                if (h < 0)
-                    h += 360;
-                h = ~~h / 360;
-
-                if (s < 0)
-                    s = 0;
-                else if (s > 100)
-                    s = 100;
-                s = ~~s / 100;
-
-                if (l < 0)
-                    l = 0;
-                else if (l > 100)
-                    l = 100;
-                l = ~~l / 100;
-
-                if (s === 0) {
-                    r = g = b = l; // achromatic
+            },
+            attached: function() {
+                this.async(function() {
+                    this._updatePosition();
+                });
+            },
+            _updatePosition: function() {
+                var boxRect = this.getBoundingClientRect();
+                var listRect = this.$.colorlist.getBoundingClientRect();
+                var leftDiff = listRect.width - (window.innerWidth - boxRect.left);
+                var botDiff = listRect.height - (window.innerHeight - boxRect.bottom);
+                if (leftDiff > 0) {
+                    this.$.colorlist.style.left = (boxRect.left - listRect.width + 20) + 'px';
                 } else {
-                    var q = l < 0.5 ?
-                    l * (1 + s) :
-                    l + s - l * s;
-                    var p = 2 * l - q;
-                    r = hueToRgb(p, q, h + 1 / 3);
-                    g = hueToRgb(p, q, h);
-                    b = hueToRgb(p, q, h - 1 / 3);
+                    this.$.colorlist.style.left = (boxRect.left) + 'px';
                 }
+                if (botDiff > 0) {
+                    this.$.colorlist.style.top = (boxRect.top - listRect.height) + "px";
+                } else {
+                    this.$.colorlist.style.top = (boxRect.top + 25) + "px";
+                }
+            },
+            handleColorClick: function(e) {
+                var color = e.model.c;
+                this.color = color;
+                this.fire("color-click", {
+                    color: color
+                });
+            },
+            handleKeyPress: function(e) {
+                if (e.keyCode == 13) {
+                    this.fire("color-click", {
+                        color: this.color
+                    });
+                }
+            },
+            handleColorBoxClick: function(e) {
+                this._updatePosition();
+            },
+            computeColorStyle: function(color) {
+                return 'background-color:' + color;
+            },
+            computeColors: function(preset) {
+                return this._generateColors(preset);
+            },
+            _generateColors: function(preset) {
+                var presetPalettes = {
+                    'default': {
+                        'saturation': [70.0, 100.0, 'rows'],
+                        'hue': [0.0, 300.0, 'cols'],
+                        'value': [40.0, 98.0, 'rows']
+                    },
+                    'warm': {
+                        'saturation': [70.0, 100.0, 'rows'],
+                        'hue': [0.0, 60.0, 'cols'],
+                        'value': [40.0, 98.0, 'rows']
+                    },
+                    'cool': {
+                        'saturation': [70.0, 100.0, 'rows'],
+                        'hue': [150.0, 280.0, 'cols'],
+                        'value': [40.0, 98.0, 'rows']
+                    },
+                    'moody': {
+                        'saturation': [80.0, 12.0, 'rows'],
+                        'hue': [0.0, 300.0, 'cols'],
+                        'value': [30.0, 70.0, 'rows']
+                    },
+                    'primary': {
+                        'saturation': [100.0, 100.0, 'rows'],
+                        'hue': [0.0, 300.0, 'cols'],
+                        'value': [50.0, 98.0, 'rows']
+                    },
+                    'pastel': {
+                        'saturation': [50.0, 90.0, 'rows'],
+                        'hue': [0.0, 300.0, 'cols'],
+                        'value': [70.0, 98.0, 'rows']
+                    }
+                };
+                var hslToRgb = function(h, s, l) {
+                    var r, g, b;
 
-                return [~~(r * 255), ~~(g * 255), ~~(b * 255)];
-            };
+                    // normalize hue orientation b/w 0 and 360 degrees
+                    h = h % 360;
+                    if (h < 0)
+                        h += 360;
+                    h = ~~h / 360;
 
-            var hueToRgb = function (p, q, t) {
-                if (t < 0) t += 1;
-                if (t > 1) t -= 1;
-                if (t < 1 / 6) return p + (q - p) * 6 * t;
-                if (t < 1 / 2) return q;
-                if (t < 2 / 3) return p + (q - p) * (2 / 3 - t) * 6;
-                return p;
-            };
+                    if (s < 0)
+                        s = 0;
+                    else if (s > 100)
+                        s = 100;
+                    s = ~~s / 100;
 
-            var colors = [];
-            var settings = presetPalettes[preset];
-            settings.rows = 6;
-            settings.cols = 12;
-            var getComponent = function (component, col, row) {
-                var axis = settings[component][2];
-                var current = (axis == 'cols') ? col : row;
-                var step = (settings[component][1] - settings[component][0]) / settings[axis];
-                return parseInt((current * step) + settings[component][0]);
-            }
-            for (var r = 0; r < settings['rows']; r++) {
-                for (var c = 0; c < settings['cols']; c++) {
-                    var h = getComponent('hue', c, r);
-                    var s = getComponent('saturation', c, r);
-                    var v = getComponent('value', c, r);
-                    var asRGB = hslToRgb(h, s, v);
-                    var redAsHex = asRGB[0].toString(16);
-                    var greenAsHex = asRGB[1].toString(16);
-                    var blueAsHex = asRGB[2].toString(16);
-                    var rgb = '#' +
+                    if (l < 0)
+                        l = 0;
+                    else if (l > 100)
+                        l = 100;
+                    l = ~~l / 100;
+
+                    if (s === 0) {
+                        r = g = b = l; // achromatic
+                    } else {
+                        var q = l < 0.5 ?
+                            l * (1 + s) :
+                            l + s - l * s;
+                        var p = 2 * l - q;
+                        r = hueToRgb(p, q, h + 1 / 3);
+                        g = hueToRgb(p, q, h);
+                        b = hueToRgb(p, q, h - 1 / 3);
+                    }
+
+                    return [~~(r * 255), ~~(g * 255), ~~(b * 255)];
+                };
+
+                var hueToRgb = function(p, q, t) {
+                    if (t < 0) t += 1;
+                    if (t > 1) t -= 1;
+                    if (t < 1 / 6) return p + (q - p) * 6 * t;
+                    if (t < 1 / 2) return q;
+                    if (t < 2 / 3) return p + (q - p) * (2 / 3 - t) * 6;
+                    return p;
+                };
+
+                var colors = [];
+                var settings = presetPalettes[preset];
+                settings.rows = 6;
+                settings.cols = 12;
+                var getComponent = function(component, col, row) {
+                    var axis = settings[component][2];
+                    var current = (axis == 'cols') ? col : row;
+                    var step = (settings[component][1] - settings[component][0]) / settings[axis];
+                    return parseInt((current * step) + settings[component][0]);
+                }
+                for (var r = 0; r < settings['rows']; r++) {
+                    for (var c = 0; c < settings['cols']; c++) {
+                        var h = getComponent('hue', c, r);
+                        var s = getComponent('saturation', c, r);
+                        var v = getComponent('value', c, r);
+                        var asRGB = hslToRgb(h, s, v);
+                        var redAsHex = asRGB[0].toString(16);
+                        var greenAsHex = asRGB[1].toString(16);
+                        var blueAsHex = asRGB[2].toString(16);
+                        var rgb = '#' +
                             ((redAsHex.length == 1 ? '0' : '') + redAsHex) +
                             ((greenAsHex.length == 1 ? '0' : '') + greenAsHex) +
                             ((blueAsHex.length == 1 ? '0' : '') + blueAsHex);
-                    colors.push(rgb);
+                        colors.push(rgb);
+                    }
                 }
-            }
-            var n = settings['cols'];
-            var interval = 255 / n;
-            for (var r = n; r > 0; r--) {
-                var hex = Math.ceil(r * interval).toString(16);
-                var rgb = '#' +
+                var n = settings['cols'];
+                var interval = 255 / n;
+                for (var r = n; r > 0; r--) {
+                    var hex = Math.ceil(r * interval).toString(16);
+                    var rgb = '#' +
                         ((hex.length == 1 ? '0' : '') + hex) +
                         ((hex.length == 1 ? '0' : '') + hex) +
                         ((hex.length == 1 ? '0' : '') + hex);
-                colors.push(rgb);
+                    colors.push(rgb);
+                }
+                return colors;
             }
-            return colors;
-        }
-    });
-</script>
+        });
+    </script>
+</dom-module>
