--- a/src/stv-help-menu.html
+++ b/src/stv-help-menu.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../../polymer/polymer.html">
 <dom-module id="stv-help-menu">
     <style>
         :host {
@@ -65,47 +66,48 @@
             <content></content>
         </div>
     </template>
-</dom-module>
 
-<script>
-    Polymer({
-        is: "stv-help-menu",
-        properties: {
-            menuWidth: {
-                type: Number,
-                reflectToAttribute: true,
-                value: 200
-            }
-        },
-        ready: function() {
-            var me = this;
-            var bcrdm = me.$.dropmenu.getBoundingClientRect();
-            this.$.dropmenu.style.width = this.menuWidth + 'px';
-            this.$.dropmenu.style.right = (-(bcrdm.width + 400)) + 'px';
-            this.$.drop.addEventListener('focus', function() {
-                me.handleFocus();
-            });
-            this.$.drop.addEventListener('blur', function() {
-                me.handleBlur();
-            });
-        },
-        handleFocus: function() {
-            this.async(function() {
-                var bcr = this.getBoundingClientRect();
-                var bcrd = this.$.drop.getBoundingClientRect();
-                var bcrdm = this.$.dropmenu.getBoundingClientRect();
-                this.$.dropmenu.style.right = (0) + 'px';
-                this.$.dropmenu.style.top = (bcr.top + bcrd.height + 5) + 'px';
-            }, 200);
-        },
-        handleBlur: function() {
-            this.async(function() {
-                var bcr = this.getBoundingClientRect();
-                var bcrd = this.$.drop.getBoundingClientRect();
-                var bcrdm = this.$.dropmenu.getBoundingClientRect();
+
+    <script>
+        Polymer({
+            is: "stv-help-menu",
+            properties: {
+                menuWidth: {
+                    type: Number,
+                    reflectToAttribute: true,
+                    value: 200
+                }
+            },
+            ready: function() {
+                var me = this;
+                var bcrdm = me.$.dropmenu.getBoundingClientRect();
+                this.$.dropmenu.style.width = this.menuWidth + 'px';
                 this.$.dropmenu.style.right = (-(bcrdm.width + 400)) + 'px';
-                this.$.dropmenu.style.top = (bcr.top + bcrd.height + 5) + 'px';
-            }, 200);
-        }
-    });
-</script>
+                this.$.drop.addEventListener('focus', function() {
+                    me.handleFocus();
+                });
+                this.$.drop.addEventListener('blur', function() {
+                    me.handleBlur();
+                });
+            },
+            handleFocus: function() {
+                this.async(function() {
+                    var bcr = this.getBoundingClientRect();
+                    var bcrd = this.$.drop.getBoundingClientRect();
+                    var bcrdm = this.$.dropmenu.getBoundingClientRect();
+                    this.$.dropmenu.style.right = (0) + 'px';
+                    this.$.dropmenu.style.top = (bcr.top + bcrd.height + 5) + 'px';
+                }, 200);
+            },
+            handleBlur: function() {
+                this.async(function() {
+                    var bcr = this.getBoundingClientRect();
+                    var bcrd = this.$.drop.getBoundingClientRect();
+                    var bcrdm = this.$.dropmenu.getBoundingClientRect();
+                    this.$.dropmenu.style.right = (-(bcrdm.width + 400)) + 'px';
+                    this.$.dropmenu.style.top = (bcr.top + bcrd.height + 5) + 'px';
+                }, 200);
+            }
+        });
+    </script>
+</dom-module>
