--- a/src/stv-import-file.html
+++ b/src/stv-import-file.html
@@ -1,6 +1,10 @@
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
+
 <link rel="import" href="../validator/stv-validator.html">
 
 <dom-module id="stv-import-file">
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
     <style>
         :host {
             display: block;
