--- a/src/stv-profile.html
+++ b/src/stv-profile.html
@@ -1,15 +1,15 @@
+<link rel="import" href="../../polymer/polymer.html">
 <dom-module id="stv-profile">
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
     <style>
         :host {
             display: block;
             position: absolute;
             box-sizing: border-box;
             padding: 30px 100px;
-
             left: 0;
             right: 0;
             margin: 0px auto 0px auto;
-
             width: 500px;
             transition: all 0.2s;
             box-shadow: 0px 0px 12px 6px rgba(0, 0, 0, 0.30);
@@ -32,7 +32,8 @@
         }
 
         #formEmail {
-            margin-top: 40px;;
+            margin-top: 40px;
+            ;
         }
     </style>
     <template>
@@ -67,84 +68,84 @@
 
         <div class="message">{{message}}</div>
     </template>
+    <script>
+        Polymer({
+            is: "stv-profile",
+            properties: {
+                email: {
+                    type: String,
+                    value: ''
+                },
+                oldpassword: {
+                    type: String,
+                    value: ''
+                },
+                password: {
+                    type: String,
+                    value: ''
+                },
+                passwordCheck: {
+                    type: String,
+                    value: ''
+                },
+                message: {
+                    type: String,
+                    value: ''
+                }
+            },
+            handleChangePasswordForm: function(e) {
+                var me = this;
+                this.message = '';
+
+                if (this.$.formPassword.checkValidity() && (this.password === this.passwordCheck)) {
+                    SteviaManager.users.updatePassword({
+                        id: Cookies('bioinfo_user'),
+                        query: {
+                            password: CryptoJS.SHA1(this.oldpassword).toString(),
+                            npassword: CryptoJS.SHA1(this.password).toString(),
+                            sid: Cookies('bioinfo_sid')
+                        },
+                        request: {
+                            success: function(response) {
+                                if (response.response[0].error == null) {
+                                    me.message = 'Password updated';
+                                } else {
+                                    me.message = response.response[0].error;
+                                }
+                            },
+                            error: function() {
+                                me.message = 'Server error, try again later.';
+                            }
+                        }
+                    });
+                }
+            },
+            handleChangeEmailForm: function(e) {
+                var me = this;
+                this.message = '';
+
+                if (this.$.formEmail.checkValidity()) {
+                    SteviaManager.users.updateEmail({
+                        id: Cookies('bioinfo_user'),
+                        query: {
+                            nemail: this.email,
+                            sid: Cookies('bioinfo_sid')
+                        },
+                        request: {
+                            success: function(response) {
+                                if (response.response[0].error == null) {
+                                    me.message = 'E-mail updated';
+                                } else {
+                                    me.message = response.response[0].error;
+                                }
+                            },
+                            error: function() {
+                                me.message = 'Server error, try again later.';
+                            }
+                        }
+                    });
+                }
+            }
+        });
+    </script>
 </dom-module>
-<script>
-    Polymer({
-        is: "stv-profile",
-        properties: {
-            email: {
-                type: String,
-                value: ''
-            },
-            oldpassword: {
-                type: String,
-                value: ''
-            },
-            password: {
-                type: String,
-                value: ''
-            },
-            passwordCheck: {
-                type: String,
-                value: ''
-            },
-            message: {
-                type: String,
-                value: ''
-            }
-        },
-        handleChangePasswordForm: function (e) {
-            var me = this;
-            this.message = '';
-
-            if (this.$.formPassword.checkValidity() && (this.password === this.passwordCheck)) {
-                SteviaManager.users.updatePassword({
-                    id: Cookies('bioinfo_user'),
-                    query: {
-                        password: CryptoJS.SHA1(this.oldpassword).toString(),
-                        npassword: CryptoJS.SHA1(this.password).toString(),
-                        sid: Cookies('bioinfo_sid')
-                    },
-                    request: {
-                        success: function (response) {
-                            if (response.response[0].error == null) {
-                                me.message = 'Password updated';
-                            } else {
-                                me.message = response.response[0].error;
-                            }
-                        },
-                        error: function () {
-                            me.message = 'Server error, try again later.';
-                        }
-                    }
-                });
-            }
-        },
-        handleChangeEmailForm: function (e) {
-            var me = this;
-            this.message = '';
-
-            if (this.$.formEmail.checkValidity()) {
-                SteviaManager.users.updateEmail({
-                    id: Cookies('bioinfo_user'),
-                    query: {
-                        nemail: this.email,
-                        sid: Cookies('bioinfo_sid')
-                    },
-                    request: {
-                        success: function (response) {
-                            if (response.response[0].error == null) {
-                                me.message = 'E-mail updated';
-                            } else {
-                                me.message = response.response[0].error;
-                            }
-                        },
-                        error: function () {
-                            me.message = 'Server error, try again later.';
-                        }
-                    }
-                });
-            }
-        }
-    });
-</script>
