--- a/src/stv-remember.html
+++ b/src/stv-remember.html
@@ -1,4 +1,7 @@
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <dom-module id="stv-remember">
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
     <style>
         :host {
             display: block;
@@ -38,7 +41,7 @@
                 <i class="fa fa-life-ring"></i>
             </div>
         </div>
-        <form id="form" vertical layout on-keypress="handleFormKey">
+        <form id="form" on-keypress="handleFormKey">
             <!-- <label class="stv">User ID</label>
             <input class="stv" type="text" value="{{user::input}}" required pattern="[a-zA-Z0-9]+">
             <br> -->
@@ -54,70 +57,69 @@
             <template is="dom-if" if="{{loading}}">
                 <i class="fa fa-spinner fa-spin" style="margin-right: 5px;"></i>
             </template>
-            <div >{{message}}</div>
+            <div>{{message}}</div>
         </div>
     </template>
-</dom-module>
-<script>
-    Polymer({
-        is: "stv-remember",
-        properties: {
-            email: {
-                type: String,
-                value: ''
+    <script>
+        Polymer({
+            is: "stv-remember",
+            properties: {
+                email: {
+                    type: String,
+                    value: ''
+                },
+                user: {
+                    type: String,
+                    value: ''
+                },
+                message: {
+                    type: String,
+                    value: ''
+                },
+                loading: {
+                    type: Boolean,
+                    value: false
+                }
             },
-            user: {
-                type: String,
-                value: ''
+            //        created: function () {
+            //            this.user;
+            //            this.email;
+            //        },
+            handleFormKey: function(e) {
+                if (e.which == 13) {
+                    this.handleForm();
+                }
             },
-            message: {
-                type: String,
-                value: ''
-            },
-            loading: {
-                type: Boolean,
-                value: false
-            }
-        },
-        //        created: function () {
-        //            this.user;
-        //            this.email;
-        //        },
-        handleFormKey: function(e) {
-            if (e.which == 13) {
-                this.handleForm();
-            }
-        },
-        handleForm: function(e) {
-            var me = this;
-            this.message = '';
-            this.loading = false;
+            handleForm: function(e) {
+                var me = this;
+                this.message = '';
+                this.loading = false;
 
-            if (this.$.form.checkValidity()) {
-                this.message = 'Processing request...';
-                this.loading = true;
-                SteviaManager.users.resetPassword({
-                    // id: this.user,
-                    query: {
-                        email: this.email
-                    },
-                    request: {
-                        success: function(response) {
-                            if (response.response[0].error == null) {
-                                me.message = 'An email was sent with reset password instructions';
-                            } else {
-                                me.message = response.response[0].error;
-                            }
-                            me.loading = false;
+                if (this.$.form.checkValidity()) {
+                    this.message = 'Processing request...';
+                    this.loading = true;
+                    SteviaManager.users.resetPassword({
+                        // id: this.user,
+                        query: {
+                            email: this.email
                         },
-                        error: function() {
-                            me.message = 'Server error, try again later.';
-                            me.loading = false;
+                        request: {
+                            success: function(response) {
+                                if (response.response[0].error == null) {
+                                    me.message = 'An email was sent with reset password instructions';
+                                } else {
+                                    me.message = response.response[0].error;
+                                }
+                                me.loading = false;
+                            },
+                            error: function() {
+                                me.message = 'Server error, try again later.';
+                                me.loading = false;
+                            }
                         }
-                    }
-                });
+                    });
+                }
             }
-        }
-    });
-</script>
-</polymer-element>
+        });
+    </script>
+</dom-module>
