--- a/src/stv-select-box.html
+++ b/src/stv-select-box.html
@@ -1,4 +1,7 @@
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <dom-module id="stv-select-box">
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
     <style>
         :host {
             display: block;
@@ -29,70 +32,70 @@
             </div>
         </template>
     </template>
-</dom-module>
-<script>
-    Polymer({
-        is: 'stv-select-box',
-        properties: {
-            options: {
-                type: Array,
-                value: function() {
-                    return []
+    <script>
+        Polymer({
+            is: 'stv-select-box',
+            properties: {
+                options: {
+                    type: Array,
+                    value: function() {
+                        return []
+                    },
+                    observer: 'optionsChanged'
                 },
-                observer: 'optionsChanged'
+                selected: {
+                    type: Object
+                },
+                selectFirst: {
+                    type: Boolean,
+                    reflectToAttribute: true,
+                    value: true
+                },
+                nameAttribute: {
+                    type: String,
+                    value: 'name'
+                },
+                titleAttribute: {
+                    type: String,
+                    value: 'title'
+                }
             },
-            selected: {
-                type: Object
+            computeOptionDisplay: function(option) {
+                return option[this.titleAttribute];
             },
-            selectFirst: {
-                type: Boolean,
-                reflectToAttribute: true,
-                value: true
+            optionsChanged: function() {
+                if (this.selected != null && this.selected.name) {
+                    this.selectByName(this.selected.name);
+                } else {
+                    this.selectByIndex(0);
+                }
             },
-            nameAttribute: {
-                type: String,
-                value: 'name'
-            },
-            titleAttribute: {
-                type: String,
-                value: 'title'
-            }
-        },
-        computeOptionDisplay: function(option) {
-            return option[this.titleAttribute];
-        },
-        optionsChanged: function() {
-            if (this.selected != null && this.selected.name) {
-                this.selectByName(this.selected.name);
-            } else {
-                this.selectByIndex(0);
-            }
-        },
-        handleSelect: function(e) {
-            this.set('selected', e.model.option);
-            this.fire('select', this.selected);
-        },
-        isSelected: function(selected, current) {
-            return selected == current;
-        },
-        selectByIndex: function(index) {
-            if (this.options[index] != null) {
-                this.set('selected', this.options[index]);
+            handleSelect: function(e) {
+                this.set('selected', e.model.option);
                 this.fire('select', this.selected);
-            }
-        },
-        selectByName: function(name) {
-            var index = -1;
-            for (var i = 0; i < this.options.length; i++) {
-                var option = this.options[i];
-                if (option[this.nameAttribute] == name) {
-                    index = i;
-                    break;
+            },
+            isSelected: function(selected, current) {
+                return selected == current;
+            },
+            selectByIndex: function(index) {
+                if (this.options[index] != null) {
+                    this.set('selected', this.options[index]);
+                    this.fire('select', this.selected);
+                }
+            },
+            selectByName: function(name) {
+                var index = -1;
+                for (var i = 0; i < this.options.length; i++) {
+                    var option = this.options[i];
+                    if (option[this.nameAttribute] == name) {
+                        index = i;
+                        break;
+                    }
+                }
+                if (index > -1) {
+                    this.selectByIndex(index);
                 }
             }
-            if (index > -1) {
-                this.selectByIndex(index);
-            }
-        }
-    });
-</script>
+        });
+    </script>
+</dom-module>
