--- a/src/stv-select.html
+++ b/src/stv-select.html
@@ -1,4 +1,7 @@
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <dom-module id="stv-select">
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
     <style>
         :host {
             display: block;
@@ -67,96 +70,96 @@
             <content id="content"></content>
         </div>
     </template>
-</dom-module>
-<script>
-    Polymer({
-        is: 'stv-select',
-        properties: {
-            selectedOption: {
-                type: Object
-            },
-            selectedOptionText: {
-                type: String,
-            },
-            value: {
-                type: String,
-                observer: 'valueChanged'
-            },
-            tabindex: {
-                type: String,
-                reflectToAttribute: true,
-                value: '-1'
-            }
-        },
-        listeners: {
-            'blur': 'hideList',
-        },
-        ready: function() {
-            var me = this;
-            this._observer = Polymer.dom(this.$.content).observeNodes(function(info) {
-                me._checkSelected();
-            });
-        },
-        handleClick: function(e) {
-            e.stopPropagation();
-            this.toggleList(e);
-        },
-        toggleList: function(e) {
-            if (this.$.list.style.display === '') {
-                this.showList(e);
-            } else {
-                this.hideList();
-            }
-        },
-        showList: function(e) {
-            // var bcr = this.$.main.getBoundingClientRect();
-            // this.$.list.style.top = (bcr.top + bcr.height - 1) + 'px';
-            // this.$.list.style.left = bcr.left + 'px';
-            // this.$.list.style.width = bcr.width + 'px';
-            this.$.list.style.display = 'block';
-
-        },
-        hideList: function() {
-            this.$.list.style.display = '';
-        },
-
-        handleSelect: function(e) {
-            if (e.target.tagName === 'STV-OPTION') {
-                this.select(e.target);
-                this.hideList();
-            }
-        },
-        select: function(option, notify) {
-            if (this.selectedOption !== option) {
-                this.set('selectedOption', option);
-                this.set('selectedOptionText', option.value);
-                this.set('value', option.value);
-                if (notify !== false) {
-                    this.fire('change');
+    <script>
+        Polymer({
+            is: 'stv-select',
+            properties: {
+                selectedOption: {
+                    type: Object
+                },
+                selectedOptionText: {
+                    type: String,
+                },
+                value: {
+                    type: String,
+                    observer: 'valueChanged'
+                },
+                tabindex: {
+                    type: String,
+                    reflectToAttribute: true,
+                    value: '-1'
                 }
-            }
-        },
-        valueChanged: function(){
-          this._checkSelected();
-        },
-        _checkSelected: function() {
-            var options = this.$.list.querySelectorAll('stv-option');
-            if (this.value == null) {
-                if (options.length > 0) {
-                    this.select(options[0], false);
+            },
+            listeners: {
+                'blur': 'hideList',
+            },
+            ready: function() {
+                var me = this;
+                this._observer = Polymer.dom(this.$.content).observeNodes(function(info) {
+                    me._checkSelected();
+                });
+            },
+            handleClick: function(e) {
+                e.stopPropagation();
+                this.toggleList(e);
+            },
+            toggleList: function(e) {
+                if (this.$.list.style.display === '') {
+                    this.showList(e);
+                } else {
+                    this.hideList();
                 }
-            } else {
-                for (var i = 0; i < options.length; i++) {
-                    var option = options[i];
-                    if (option.value === this.value) {
-                        this.select(option, false);
-                        break;
+            },
+            showList: function(e) {
+                // var bcr = this.$.main.getBoundingClientRect();
+                // this.$.list.style.top = (bcr.top + bcr.height - 1) + 'px';
+                // this.$.list.style.left = bcr.left + 'px';
+                // this.$.list.style.width = bcr.width + 'px';
+                this.$.list.style.display = 'block';
+
+            },
+            hideList: function() {
+                this.$.list.style.display = '';
+            },
+
+            handleSelect: function(e) {
+                if (e.target.tagName === 'STV-OPTION') {
+                    this.select(e.target);
+                    this.hideList();
+                }
+            },
+            select: function(option, notify) {
+                if (this.selectedOption !== option) {
+                    this.set('selectedOption', option);
+                    this.set('selectedOptionText', option.value);
+                    this.set('value', option.value);
+                    if (notify !== false) {
+                        this.fire('change');
+                    }
+                }
+            },
+            valueChanged: function() {
+                this._checkSelected();
+            },
+            _checkSelected: function() {
+                var options = this.$.list.querySelectorAll('stv-option');
+                if (this.value == null) {
+                    if (options.length > 0) {
+                        this.select(options[0], false);
+                    }
+                } else {
+                    for (var i = 0; i < options.length; i++) {
+                        var option = options[i];
+                        if (option.value === this.value) {
+                            this.select(option, false);
+                            break;
+                        }
                     }
                 }
             }
-        }
-    });
-</script>
+        });
+    </script>
+</dom-module>
 
 <dom-module id="stv-option">
     <style>
@@ -164,7 +167,7 @@
             display: block;
             position: relative;
             box-sizing: border-box;
-            margin-bottom:1px;
+            margin-bottom: 1px;
             /*word-break: normal;break-all;*/
             /*height: 20px;*/
             /*overflow: hidden;*/
@@ -174,15 +177,15 @@
     <template>
         <content></content>
     </template>
+    <script>
+        Polymer({
+            is: 'stv-option',
+            properties: {
+                value: {
+                    type: String,
+                    reflectToAttribute: true
+                },
+            }
+        });
+    </script>
 </dom-module>
-<script>
-    Polymer({
-        is: 'stv-option',
-        properties: {
-            value: {
-                type: String,
-                reflectToAttribute: true
-            },
-        }
-    });
-</script>
